--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 		"babel-core": "^6.26.0",
 		"babel-eslint": "^8.2.6",
 		"babel-loader": "^7.1.4",
+		"babel-plugin-external-helpers": "^6.22.0",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-preset-env": "^1.6.1",
 		"babel-preset-minify": "^0.4.0",
 		"eslint": "^5.3.0",
