--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-preset-env": "^1.6.1",
 		"babel-preset-minify": "^0.4.0",
+		"babel-preset-react": "^6.24.1",
 		"eslint": "^5.3.0",
 		"eslint-import-resolver-webpack": "^0.10.1",
 		"eslint-plugin-import": "^2.14.0",
